# TelegaBoostServiceBot

./: .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  run.sh
src/: __main__.py  background_tasks.py  config.py  loader.py
src/busines_logic/: calculate_commission.py  order_management.py  referrals_managment.py  special_offers.py
src/busines_logic/order_managment/: handle_canceled_orders.py  place_paid_orders_to_que.py  take_into_work.py  update_status_of_orders.py
src/busines_logic/process_orders/: standard_order.py  tg_stars_order.py
src/core/: db.py  env.py  storage.py
src/core/db/: __init__.py  admin.py  main_orders_que.py  main_orders_queue.py  orders.py  promo.py  transactions.py  users.py
src/core/localisation/: lang.py
src/enums/: transaction_type.py
src/enums/orders/: order_status.py  payment_methods.py  service_type.py
src/handlers/: __init__.py  cmd_start.py  cmd_support.py  orders.py  switch_lang.py
src/handlers/admin_panel/: __init__.py  cmd_admin.py  take_orders_into_work.py
src/handlers/balance_recharge/: __init__.py  st1_callback_handler.py  st2_choosing_amount.py  st3_accept_or_reject_amount.py  st4_check_payment_status.py  st4_choose_payment_method.py
src/handlers/buy_stars/: __init__.py  st1_intro.py  st2_choose_quantity.py  st3_username_selection.py  st4_confirmaton.py
src/utils/: .json  api.py  callback_templates.py  category_names.py  commands.py  currency_api.py  kb.py  lang.py  methods.py  navigation.py  order_status.py  plans.py  raw_telegram_methods.py  special_offers.py  states.py  texts.py
(+68 files in other folders)
