[tool.poetry]
name = "tgboostservicebot"
version = "0.1.0"
description = ""
authors = ["rainskin <homemadepunk@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.13.1"
envparse = "^0.2.0"
pymongo = "^4.7.2"
requests = "^2.31.0"
motor = "^3.4.0"
yookassa = "^3.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
